--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
@@ -1,25 +1,30 @@
-<!doctype html>
-<html>
+{% load static %}
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<script src="dmxAppConnect/dmxAppConnect.js"></script>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{% static 'timeline/style.css' %}">
+    {% if title %}
+        <title>Totally Not Instagram - {{ title }}</title>
+    {% else %}
+        <title>Totally Not Instagram</title>
+    {% endif %}
+    	<script src="{% static 'timeline/dmxAppConnect/dmxAppConnect.js' %}"></script>
 	<meta charset="UTF-8">
-	<title>Untitled Document</title>
-	<script src="js/jquery-3.4.1.slim.min.js"></script>
+	<script src="{% static 'timeline/js/jquery-3.4.1.slim.min.js' %}"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="bootstrap/4/simplex/bootstrap.min.css" />
-	<script src="dmxAppConnect/dmxBootstrap4Navigation/dmxBootstrap4Navigation.js" defer=""></script>
-	<script src="dmxAppConnect/dmxBootstrap4Modal/dmxBootstrap4Modal.js" defer=""></script>
+	<link rel="stylesheet" href="{% static 'timeline/bootstrap/4/simplex/bootstrap.min.css' %}" />
+	<script src="{% static 'timeline/dmxAppConnect/dmxBootstrap4Navigation/dmxBootstrap4Navigation.js' %}" defer=""></script>
+	<script src="{% static 'timeline/dmxAppConnect/dmxBootstrap4Modal/dmxBootstrap4Modal.js' %}" defer=""></script>
 </head>
-
-<body onload="modal-loggedin" is="dmx-app" id="timeline">
-
+<body>
 	<header class="bg-light">
 		<div class="container">
 			<div class="row">
 				<div class="col">
 					<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-						<img src="TNI_Assets/TNI-Logo.png" class="navbar-brand mr-auto" href="#" width="55">
+						<img src="{% static 'timeline/TNI_Assets/TNI-Logo.png' %}" class="navbar-brand mr-auto" href="#" width="55">
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1_collapse" aria-controls="navbar1_collapse" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -50,19 +55,11 @@
 			</div>
 		</div>
 	</div>
-	<main>
+    <main>
 		<div class="container wappler-block">
 			<div class="row">
 				<div class="col-12 col-md-8 col-xl-9">
-					<div class="card">
-						<div class="card-header">Featured</div>
-						<img class="card-img-top" alt="Card image cap">
-						<div class="card-body">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-							<a href="#" class="btn btn-primary">Go somewhere</a>
-						</div>
-					</div>
+                    {% block content %}{% endblock %}
 				</div>
 				<div class="col-12 col-md-4 col-xl-3">
 					<div class="card sticky-top">
@@ -76,8 +73,8 @@
 			</div>
 		</div>
 	</main>
+
 	<script src="bootstrap/4/js/popper.min.js"></script>
 	<script src="bootstrap/4/js/bootstrap.min.js"></script>
 </body>
-
 </html>
