--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/home_test.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/home_test.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home/Timeline</title>
-</head>
-<body>
-    <h1>This is the home page!</h1>
-    <h2>This is a list of test posts:</h2>
-        {% for post in posts %}
-            <h3>{{ post.caption }}</h3>
-            <p>Posted by {{post.author}} on {{post.timestamp}}</p>
-        {% endfor %}
-</body>
-</html>
+{% extends "timeline/base.html" %}
+{% load static %}
+{% block content %}
+    {% for post in posts %}
+        <div class="card mb-4">
+            <div class="card-header">Something goes here?</div>
+            <img src="{% static 'timeline/TNI_Assets/timeline_image.png' %}" class="card-img-top" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">{{post.author}}</h4>
+                <p class="card-text">Posted on {{post.timestamp}} || {{ post.caption }}</p>
+                <a href="#" class="btn btn-primary">LIKE BUTTON</a>
+            </div>
+        </div>
+    {% endfor %}
+{% endblock content %}
