--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
@@ -65,7 +65,7 @@
 					<div class="card sticky-top">
 						<div class="card-body">
 							<h5 class="card-title">Plear Reigster or Login</h5>
-							<a href="#" class="btn btn-primary">Register</a>
+							<a href="registration/" class="btn btn-primary">Register</a>
             </br>
               <a href="#" class="btn btn-primary">Login</a>
 						</div>
