--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/user_registration.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/user_registration.html
@@ -7,10 +7,11 @@
    <body>
      <h1>Fill out the form</h1>
      <div class="container">
-       <form method= "POST">
+       <form method= "POST" action="registeruser/">
 
        {{form.as_p}}
-       
+       {% csrf_token %}
+
 
        <input type="submit" class="btn btn-primary" value="Register">
        </form>
