--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/home_test.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/home_test.html
@@ -1,14 +1,14 @@
 {% extends "timeline/base.html" %}
 {% load static %}
-{% block content %}
-  <form method = "post" enctype="multipart/form-data" action="imageupload/">
-      {% csrf_token %}
+<!--{% block content %}-->
+ <form method = "post" enctype="multipart/form-data" action="imageupload/">
+    {% csrf_token %}
       <input type="textarea" name="name">
       <input type="file" name="Img">
       <button type="submit">Upload Pic</button>
   </form>
 
-  <ul>
+  <!--<ul>
       {% for post in posts %}
       <div class="card mb-4">
         <h2>{{ post.name }}</h2>
@@ -16,18 +16,18 @@
       </div>
       {% endfor %}
   </ul>
-
-    {% for post in posts %}
-        <div class="card mb-4">
+-->
+<!--< {% for post in posts %}-->
+        <div class="">
         <!--  <div class="card-header">Something goes here?</div> -->
         <!--  <img src="{% static 'timeline/TNI_Assets/timeline_image.png' %}" class="card-img-top" alt="Card image cap">
            -->
             <div class="card-body">
                 <h4 class="card-title">{{post.author}}</h4>
                 <p class="card-text">Posted on {{post.timestamp}} || {{ post.caption }}</p>
-                <ul>
-                    {% for post in posts %}
-                    <div class="card mb-4">
+               <ul>
+                  <!--  {% for post in posts %}-->
+                    <div class="">
                       <h2>{{ post.name }}</h2>
                       <img src="{{ post.Img.url}}" alt="{{ post.name }}" height="90" width="90">
                       <form action="" id="usrform">
@@ -37,11 +37,11 @@
                        </form>
                       <a href="#" class="btn btn-primary">Like</a>
                     </div>
-                    {% endfor %}
+                  <!--  {% endfor %}-->
 
-                </ul>
+
 
             </div>
         </div>
-    {% endfor %}
-{% endblock content %}
+  <!-- {% endfor %} -->
+<!--{% endblock content %}-->
