--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
@@ -32,7 +32,7 @@
 							<div class="navbar-nav">
 							<a class="nav-item nav-link active" href="/home">Home</a>
 							<a href="/registration" class="nav-item nav-link">Register</a>
-							<a class="nav-item nav-link" href="#">Login</a>
+							<a class="nav-item nav-link" href="login/">Login</a>
 							</div>
 						</div>
 					</nav>
