--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/base.html
@@ -30,8 +30,8 @@
 						</button>
 						<div class="collapse navbar-collapse justify-content-end" id="navbar1_collapse">
 							<div class="navbar-nav">
-							<a class="nav-item nav-link active" href="/home">Home</a>
-							<a href="/registration" class="nav-item nav-link">Register</a>
+							<a class="nav-item nav-link active" href="home/">Home</a>
+							<a href="registration/" class="nav-item nav-link">Register</a>
 							<a class="nav-item nav-link" href="login/">Login</a>
 							<a class="nav-item nav-link" href="logout/">Logout</a>
 							</div>
