--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/profile.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/profile.html
@@ -23,7 +23,7 @@
 			<div class="row">
 				<div class="col">
 					<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-						<img src="{% static 'TNI_Assets/TNI-Logo.png" class="navbar-brand mr-auto' %}" href="{% static '#' %}" width="55">
+						<img src="{% static 'timeline/TNI_Assets/TNI-Logo.png' %}"  class="navbar-brand mr-auto" href="#" width="55">
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1_collapse" aria-controls="navbar1_collapse" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -59,7 +59,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="offset-1 col-3">
-						<img src="{% static 'TNI_Assets/TNI-Logo.png' %}" class="img-fluid" width="168px" height="168px">
+						<img src="{% static 'timeline/TNI_Assets/TNI-Logo.png' %}" class="img-fluid" width="168px" height="168px">
 					</div>
 					<div class="col">
 						<div class="row mb-2">
@@ -118,7 +118,7 @@
 					<div class="offset-3 col-6">
 						<div class="card mb-0">
 							<div class="card-header">📌 Pinned</div>
-							<img class="card-img-top img-thumbnail" alt="Card image cap" src="{% static 'TNI_Assets/erin-babnik-photography-990x556.jpg' %}">
+							<img class="card-img-top img-thumbnail" alt="Card image cap" src="{% static 'timeline/TNI_Assets/erin-babnik-photography-990x556.jpg' %}">
 						</div>
 					</div>
 				</div>
@@ -128,41 +128,41 @@
 			<div class="container">
 				<div class="row mb-xl-3 row-cols-xl-3" is="dmx-masonry" id="masonry1" dmx-bind:repeat="1" preserve-order columns="3">
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/erin-babnik-photography-990x556.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/erin-babnik-photography-990x556.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/nathan-lee-allen-landscape-feature-1024x464.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/nathan-lee-allen-landscape-feature-1024x464.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/landscape_photography.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/landscape_photography.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/6.ngsversion.1467942028599.adapt.1900.1.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/6.ngsversion.1467942028599.adapt.1900.1.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/Mass.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/Mass.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/erin-babnik-photography-990x556.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/erin-babnik-photography-990x556.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/nathan-lee-allen-landscape-feature-1024x464.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/nathan-lee-allen-landscape-feature-1024x464.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/landscape_photography.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/landscape_photography.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/6.ngsversion.1467942028599.adapt.1900.1.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/6.ngsversion.1467942028599.adapt.1900.1.jpg' %}">
 					</div>
 					<div class="col mb-xl-3">
-						<img class="img-thumbnail img-fluid" src="{% static 'TNI_Assets/Mass.jpg' %}">
+						<img class="img-thumbnail img-fluid" src="{% static 'timeline/TNI_Assets/Mass.jpg' %}">
 					</div>
 				</div>
 			</div>
 		</section>
 	</main>
-	<script src="{% static 'bootstrap/4/js/popper.min.js' %}"></script>
-	<script src="{% static 'bootstrap/4/js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'timeline/bootstrap/4/js/popper.min.js' %}"></script>
+	<script src="{% static 'timeline/bootstrap/4/js/bootstrap.min.js' %}"></script>
 </body>
 
 </html>
