profile page made

--- a/TNI_Pycharm/TNI_Project/timeline/templates/timeline/profile.html
+++ b/TNI_Pycharm/TNI_Project/timeline/templates/timeline/profile.html
@@ -59,7 +59,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="offset-1 col-3">
-						<img src="{% static 'timeline/TNI_Assets/TNI-Logo.png' %}" class="img-fluid" width="168px" height="168px">
+						<img src="{{ user.userProfile.picture.url }}" class="img-fluid" width="168px" height="168px">
 					</div>
 					<div class="col">
 						<div class="row mb-2">
